manifest/dgw/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dgw
  namespace: dgw
  labels:
    app: dgw
spec:
  type: NodePort
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 80
    - name: 443-tcp
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30000
  selector:
    app: dgw
